--- a/style/style.css
+++ b/style/style.css
@@ -56,7 +56,8 @@ body nav .close_menu {
   width: 100px;
   position: absolute;
   top: 50%;
-  left: 0;
+  left: -50px;
+  z-index: 1;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -104,17 +105,9 @@ body .name {
 body .up {
   width: 100%;
 }
-body .fa-angle-down {
-  margin-top: -100px;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  color: #800080;
-  font-size: 6rem;
-}
 body .about_content {
   width: 100%;
-  height: 500px;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -253,8 +246,6 @@ body .down {
 }
 body .wrapper_project {
   width: 100%;
-  top: 1150px;
-  left: 20%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -262,7 +253,7 @@ body .wrapper_project {
   background-color: #800080;
 }
 body .wrapper_project h1 {
-  height: 400px;
+  height: 200px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -341,4 +332,16 @@ body .contact ul li {
   list-style: none;
   margin-left: 10px;
   color: #800080;
+}
+
+@media (max-width: 768px) {
+  body .about_content P {
+    width: 80%;
+  }
+  body .programming_language .technology {
+    width: 90%;
+  }
+  body .wrapper_project .project {
+    width: 70%;
+  }
 }/*# sourceMappingURL=style.css.map */
