--- a/style/style.scss
+++ b/style/style.scss
@@ -54,7 +54,8 @@ body{
             width: 100px;
             position: absolute;
             top: 50%;
-            left: 0;
+            left: -50px;
+            z-index: 1;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -104,17 +105,9 @@ body{
     .up{
             width: 100%;
     }
-    .fa-angle-down{
-        margin-top: -100px;
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-        color: #800080;
-        font-size: 6rem;
-    }
     .about_content{
         width: 100%;
-        height: 500px;
+        height: auto;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -253,15 +246,13 @@ body{
     }
     .wrapper_project{
         width: 100%;
-        top: 1150px;
-        left: 20%;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
         background-color: #800080;
         h1{
-            height: 400px;
+            height: 200px;
             width: 100%;
             display: flex;
             justify-content: center;
@@ -345,25 +336,22 @@ body{
     }
 }
 
-// @media (max-width: 768px) {
-//     body{
-//         nav{
-//             .fa-bars{
-//                 color: #fff;
-//                 display: flex;
-//                 justify-content: center;
-//                 align-items: center;
-//                 margin-left: 75%;
-//                 transform: scale(2);
-//             }
-//             ul{
-//                 display: none;
-//             }
-//         }
-//         .wrapper_project{
-//             .project{
-//                 width: 70%;
-//             }
-//         }
-//     }
-// }
+@media (max-width: 768px) {
+    body{
+        .about_content{
+            P{
+            width: 80%;
+            }
+        }
+        .programming_language{
+            .technology{
+                width: 90%;
+            }
+        }
+        .wrapper_project{
+            .project{
+                width: 70%;
+            }
+        }
+    }
+}
